{
  "version": 4,
  "terraform_version": "1.2.8",
  "serial": 31,
  "lineage": "137d36a7-4eb4-c821-9e29-5f377ac12229",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx-instances",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0019ad94c6124959d",
            "arn": "arn:aws:ec2:us-west-1:604628568255:instance/i-0107e9056ba6446cd",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "hustlrweb-uat-89772-nginx_profile",
            "id": "i-0107e9056ba6446cd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ac0bf528b967e67e",
            "private_dns": "ip-10-1-0-111.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.0.111",
            "public_ip": "54.183.163.199",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0bbb9816825fdaf56",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0702a96d1c53cd71b",
            "tags": {
              "Name": "hustlrweb-UAT-instsance0",
              "billing_code": "DevOps1",
              "company": "Hustlrmantics",
              "environment": "UAT",
              "project": "Hustlrmantics-tech-bunker"
            },
            "tags_all": {
              "Name": "hustlrweb-UAT-instsance0",
              "billing_code": "DevOps1",
              "company": "Hustlrmantics",
              "environment": "UAT",
              "project": "Hustlrmantics-tech-bunker"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b6b58621fde78b35"
            ]
          },
          "dependencies": [
            "aws_security_group.nginx_sg",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.root",
            "data.aws_ssm_parameter.ami",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.web_app_s3.aws_iam_instance_profile.nginx_profile",
            "module.web_app_s3.aws_iam_role.allow_nginx_s3",
            "module.web_app_s3.aws_iam_role_policy.allow_s3_all",
            "module.web_app_s3.aws_s3_bucket.web_bucket",
            "module.web_app_s3.aws_s3_bucket_acl.web_bucket_acl",
            "module.web_app_s3.aws_s3_bucket_policy.web_bucket_policy",
            "random_integer.rand"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0019ad94c6124959d",
            "arn": "arn:aws:ec2:us-west-1:604628568255:instance/i-0e4f8ded510ebcf6d",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "hustlrweb-uat-89772-nginx_profile",
            "id": "i-0e4f8ded510ebcf6d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02c5e6564df6ad1b4",
            "private_dns": "ip-10-1-1-84.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.84",
            "public_ip": "13.56.232.26",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02bc5ecbb683975a2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06a8f77b937c16244",
            "tags": {
              "Name": "hustlrweb-UAT-instsance1",
              "billing_code": "DevOps1",
              "company": "Hustlrmantics",
              "environment": "UAT",
              "project": "Hustlrmantics-tech-bunker"
            },
            "tags_all": {
              "Name": "hustlrweb-UAT-instsance1",
              "billing_code": "DevOps1",
              "company": "Hustlrmantics",
              "environment": "UAT",
              "project": "Hustlrmantics-tech-bunker"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b6b58621fde78b35"
            ]
          },
          "dependencies": [
            "aws_security_group.nginx_sg",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.root",
            "data.aws_ssm_parameter.ami",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.web_app_s3.aws_iam_instance_profile.nginx_profile",
            "module.web_app_s3.aws_iam_role.allow_nginx_s3",
            "module.web_app_s3.aws_iam_role_policy.allow_s3_all",
            "module.web_app_s3.aws_s3_bucket.web_bucket",
            "module.web_app_s3.aws_s3_bucket_acl.web_bucket_acl",
            "module.web_app_s3.aws_s3_bucket_policy.web_bucket_policy",
            "random_integer.rand"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0019ad94c6124959d",
            "arn": "arn:aws:ec2:us-west-1:604628568255:instance/i-0867db0e956937ed1",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "hustlrweb-uat-89772-nginx_profile",
            "id": "i-0867db0e956937ed1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-04e2475a1c677783f",
            "private_dns": "ip-10-1-0-53.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.0.53",
            "public_ip": "3.101.19.102",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0fdd3ddbeab9b00c1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0702a96d1c53cd71b",
            "tags": {
              "Name": "hustlrweb-UAT-instsance2",
              "billing_code": "DevOps1",
              "company": "Hustlrmantics",
              "environment": "UAT",
              "project": "Hustlrmantics-tech-bunker"
            },
            "tags_all": {
              "Name": "hustlrweb-UAT-instsance2",
              "billing_code": "DevOps1",
              "company": "Hustlrmantics",
              "environment": "UAT",
              "project": "Hustlrmantics-tech-bunker"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b6b58621fde78b35"
            ]
          },
          "dependencies": [
            "aws_security_group.nginx_sg",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.root",
            "data.aws_ssm_parameter.ami",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.web_app_s3.aws_iam_instance_profile.nginx_profile",
            "module.web_app_s3.aws_iam_role.allow_nginx_s3",
            "module.web_app_s3.aws_iam_role_policy.allow_s3_all",
            "module.web_app_s3.aws_s3_bucket.web_bucket",
            "module.web_app_s3.aws_s3_bucket_acl.web_bucket_acl",
            "module.web_app_s3.aws_s3_bucket_policy.web_bucket_policy",
            "random_integer.rand"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0019ad94c6124959d",
            "arn": "arn:aws:ec2:us-west-1:604628568255:instance/i-0323da87b5de0a53d",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "hustlrweb-uat-89772-nginx_profile",
            "id": "i-0323da87b5de0a53d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0db73c46ea85cb9ee",
            "private_dns": "ip-10-1-1-54.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.54",
            "public_ip": "3.101.111.151",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0626017f3c4bb6cc6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06a8f77b937c16244",
            "tags": {
              "Name": "hustlrweb-UAT-instsance3",
              "billing_code": "DevOps1",
              "company": "Hustlrmantics",
              "environment": "UAT",
              "project": "Hustlrmantics-tech-bunker"
            },
            "tags_all": {
              "Name": "hustlrweb-UAT-instsance3",
              "billing_code": "DevOps1",
              "company": "Hustlrmantics",
              "environment": "UAT",
              "project": "Hustlrmantics-tech-bunker"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b6b58621fde78b35"
            ]
          },
          "dependencies": [
            "aws_security_group.nginx_sg",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.root",
            "data.aws_ssm_parameter.ami",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.web_app_s3.aws_iam_instance_profile.nginx_profile",
            "module.web_app_s3.aws_iam_role.allow_nginx_s3",
            "module.web_app_s3.aws_iam_role_policy.allow_s3_all",
            "module.web_app_s3.aws_s3_bucket.web_bucket",
            "module.web_app_s3.aws_s3_bucket_acl.web_bucket_acl",
            "module.web_app_s3.aws_s3_bucket_policy.web_bucket_policy",
            "random_integer.rand"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "hustlrweb-uat-89772",
                "enabled": true,
                "prefix": "alb-logs"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-1:604628568255:loadbalancer/app/hustlrweb-UAT-alb/a2eea0011616900d",
            "arn_suffix": "app/hustlrweb-UAT-alb/a2eea0011616900d",
            "desync_mitigation_mode": "defensive",
            "dns_name": "hustlrweb-UAT-alb-596736937.us-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-west-1:604628568255:loadbalancer/app/hustlrweb-UAT-alb/a2eea0011616900d",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "hustlrweb-UAT-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0e21a57730af7d9c8"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-06a8f77b937c16244"
              },
              {
                "subnet_id": "subnet-0702a96d1c53cd71b"
              }
            ],
            "subnets": [
              "subnet-06a8f77b937c16244",
              "subnet-0702a96d1c53cd71b"
            ],
            "tags": {
              "billing_code": "DevOps1",
              "company": "Hustlrmantics",
              "environment": "UAT",
              "project": "Hustlrmantics-tech-bunker"
            },
            "tags_all": {
              "billing_code": "DevOps1",
              "company": "Hustlrmantics",
              "environment": "UAT",
              "project": "Hustlrmantics-tech-bunker"
            },
            "vpc_id": "vpc-07337d71db6c9d690",
            "zone_id": "Z368ELLRRE2KJ0"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "data.aws_availability_zones.available",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.web_app_s3.aws_s3_bucket.web_bucket",
            "random_integer.rand"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-1:604628568255:listener/app/hustlrweb-UAT-alb/a2eea0011616900d/cb00690358b7dab4",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:604628568255:targetgroup/hustlrweb-UAT-lbtg/8019f57fedd505fb",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:604628568255:listener/app/hustlrweb-UAT-alb/a2eea0011616900d/cb00690358b7dab4",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-1:604628568255:loadbalancer/app/hustlrweb-UAT-alb/a2eea0011616900d",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "Name": "hustlrweb-UAT-alb",
              "billing_code": "DevOps1",
              "company": "Hustlrmantics",
              "environment": "UAT",
              "project": "Hustlrmantics-tech-bunker"
            },
            "tags_all": {
              "Name": "hustlrweb-UAT-alb",
              "billing_code": "DevOps1",
              "company": "Hustlrmantics",
              "environment": "UAT",
              "project": "Hustlrmantics-tech-bunker"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.nginx",
            "aws_lb_target_group.nginx",
            "aws_security_group.alb_sg",
            "data.aws_availability_zones.available",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.web_app_s3.aws_s3_bucket.web_bucket",
            "random_integer.rand"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-1:604628568255:targetgroup/hustlrweb-UAT-lbtg/8019f57fedd505fb",
            "arn_suffix": "targetgroup/hustlrweb-UAT-lbtg/8019f57fedd505fb",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:604628568255:targetgroup/hustlrweb-UAT-lbtg/8019f57fedd505fb",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "hustlrweb-UAT-lbtg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "billing_code": "DevOps1",
              "company": "Hustlrmantics",
              "environment": "UAT",
              "project": "Hustlrmantics-tech-bunker"
            },
            "tags_all": {
              "billing_code": "DevOps1",
              "company": "Hustlrmantics",
              "environment": "UAT",
              "project": "Hustlrmantics-tech-bunker"
            },
            "target_type": "instance",
            "vpc_id": "vpc-07337d71db6c9d690"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-1:604628568255:targetgroup/hustlrweb-UAT-lbtg/8019f57fedd505fb-20220909222714744100000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:604628568255:targetgroup/hustlrweb-UAT-lbtg/8019f57fedd505fb",
            "target_id": "i-0107e9056ba6446cd"
          },
          "dependencies": [
            "aws_instance.nginx-instances",
            "aws_lb_target_group.nginx",
            "aws_security_group.nginx_sg",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.root",
            "data.aws_ssm_parameter.ami",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.web_app_s3.aws_iam_instance_profile.nginx_profile",
            "module.web_app_s3.aws_iam_role.allow_nginx_s3",
            "module.web_app_s3.aws_iam_role_policy.allow_s3_all",
            "module.web_app_s3.aws_s3_bucket.web_bucket",
            "module.web_app_s3.aws_s3_bucket_acl.web_bucket_acl",
            "module.web_app_s3.aws_s3_bucket_policy.web_bucket_policy",
            "random_integer.rand"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-1:604628568255:targetgroup/hustlrweb-UAT-lbtg/8019f57fedd505fb-20220909222714831500000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:604628568255:targetgroup/hustlrweb-UAT-lbtg/8019f57fedd505fb",
            "target_id": "i-0e4f8ded510ebcf6d"
          },
          "dependencies": [
            "aws_instance.nginx-instances",
            "aws_lb_target_group.nginx",
            "aws_security_group.nginx_sg",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.root",
            "data.aws_ssm_parameter.ami",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.web_app_s3.aws_iam_instance_profile.nginx_profile",
            "module.web_app_s3.aws_iam_role.allow_nginx_s3",
            "module.web_app_s3.aws_iam_role_policy.allow_s3_all",
            "module.web_app_s3.aws_s3_bucket.web_bucket",
            "module.web_app_s3.aws_s3_bucket_acl.web_bucket_acl",
            "module.web_app_s3.aws_s3_bucket_policy.web_bucket_policy",
            "random_integer.rand"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-1:604628568255:targetgroup/hustlrweb-UAT-lbtg/8019f57fedd505fb-20220909222714742000000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:604628568255:targetgroup/hustlrweb-UAT-lbtg/8019f57fedd505fb",
            "target_id": "i-0867db0e956937ed1"
          },
          "dependencies": [
            "aws_instance.nginx-instances",
            "aws_lb_target_group.nginx",
            "aws_security_group.nginx_sg",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.root",
            "data.aws_ssm_parameter.ami",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.web_app_s3.aws_iam_instance_profile.nginx_profile",
            "module.web_app_s3.aws_iam_role.allow_nginx_s3",
            "module.web_app_s3.aws_iam_role_policy.allow_s3_all",
            "module.web_app_s3.aws_s3_bucket.web_bucket",
            "module.web_app_s3.aws_s3_bucket_acl.web_bucket_acl",
            "module.web_app_s3.aws_s3_bucket_policy.web_bucket_policy",
            "random_integer.rand"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-1:604628568255:targetgroup/hustlrweb-UAT-lbtg/8019f57fedd505fb-20220909222714804400000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:604628568255:targetgroup/hustlrweb-UAT-lbtg/8019f57fedd505fb",
            "target_id": "i-0323da87b5de0a53d"
          },
          "dependencies": [
            "aws_instance.nginx-instances",
            "aws_lb_target_group.nginx",
            "aws_security_group.nginx_sg",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.root",
            "data.aws_ssm_parameter.ami",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.web_app_s3.aws_iam_instance_profile.nginx_profile",
            "module.web_app_s3.aws_iam_role.allow_nginx_s3",
            "module.web_app_s3.aws_iam_role_policy.allow_s3_all",
            "module.web_app_s3.aws_s3_bucket.web_bucket",
            "module.web_app_s3.aws_s3_bucket_acl.web_bucket_acl",
            "module.web_app_s3.aws_s3_bucket_policy.web_bucket_policy",
            "random_integer.rand"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:604628568255:security-group/sg-0e21a57730af7d9c8",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e21a57730af7d9c8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "hustlrweb-UAT_lbsg",
            "name_prefix": "",
            "owner_id": "604628568255",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07337d71db6c9d690"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:604628568255:security-group/sg-0b6b58621fde78b35",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b6b58621fde78b35",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.1.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "hustlrweb-UAT_ngsg",
            "name_prefix": "",
            "owner_id": "604628568255",
            "revoke_rules_on_delete": false,
            "tags": {
              "billing_code": "DevOps1",
              "company": "Hustlrmantics",
              "environment": "UAT",
              "project": "Hustlrmantics-tech-bunker"
            },
            "tags_all": {
              "billing_code": "DevOps1",
              "company": "Hustlrmantics",
              "environment": "UAT",
              "project": "Hustlrmantics-tech-bunker"
            },
            "timeouts": null,
            "vpc_id": "vpc-07337d71db6c9d690"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:604628568255:internet-gateway/igw-055da05aa1392a7c9",
            "id": "igw-055da05aa1392a7c9",
            "owner_id": "604628568255",
            "tags": {
              "Name": "hustlrweb-UAT-vpc",
              "billing_code": "DevOps1",
              "company": "Hustlrmantics",
              "environment": "UAT",
              "project": "Hustlrmantics-tech-bunker"
            },
            "tags_all": {
              "Name": "hustlrweb-UAT-vpc",
              "billing_code": "DevOps1",
              "company": "Hustlrmantics",
              "environment": "UAT",
              "project": "Hustlrmantics-tech-bunker"
            },
            "vpc_id": "vpc-07337d71db6c9d690"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-055da05aa1392a7c9",
            "id": "r-rtb-036940f1cb6485c221080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-036940f1cb6485c22",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:604628568255:route-table/rtb-036940f1cb6485c22",
            "id": "rtb-036940f1cb6485c22",
            "owner_id": "604628568255",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "hustlrweb-UAT-vpc",
              "billing_code": "DevOps1",
              "company": "Hustlrmantics",
              "environment": "UAT",
              "project": "Hustlrmantics-tech-bunker"
            },
            "tags_all": {
              "Name": "hustlrweb-UAT-vpc",
              "billing_code": "DevOps1",
              "company": "Hustlrmantics",
              "environment": "UAT",
              "project": "Hustlrmantics-tech-bunker"
            },
            "timeouts": null,
            "vpc_id": "vpc-07337d71db6c9d690"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08f7efe2429aac7bc",
            "route_table_id": "rtb-036940f1cb6485c22",
            "subnet_id": "subnet-0702a96d1c53cd71b"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cf9811a51775dd76",
            "route_table_id": "rtb-036940f1cb6485c22",
            "subnet_id": "subnet-06a8f77b937c16244"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:604628568255:subnet/subnet-0702a96d1c53cd71b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.1.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0702a96d1c53cd71b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "604628568255",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "hustlrweb-UAT-vpc",
              "billing_code": "DevOps1",
              "company": "Hustlrmantics",
              "environment": "UAT",
              "project": "Hustlrmantics-tech-bunker"
            },
            "tags_all": {
              "Name": "hustlrweb-UAT-vpc",
              "billing_code": "DevOps1",
              "company": "Hustlrmantics",
              "environment": "UAT",
              "project": "Hustlrmantics-tech-bunker"
            },
            "vpc_id": "vpc-07337d71db6c9d690"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:604628568255:subnet/subnet-06a8f77b937c16244",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06a8f77b937c16244",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "604628568255",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "hustlrweb-UAT-vpc",
              "billing_code": "DevOps1",
              "company": "Hustlrmantics",
              "environment": "UAT",
              "project": "Hustlrmantics-tech-bunker"
            },
            "tags_all": {
              "Name": "hustlrweb-UAT-vpc",
              "billing_code": "DevOps1",
              "company": "Hustlrmantics",
              "environment": "UAT",
              "project": "Hustlrmantics-tech-bunker"
            },
            "vpc_id": "vpc-07337d71db6c9d690"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:604628568255:vpc/vpc-07337d71db6c9d690",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0b1de62650628560f",
            "default_route_table_id": "rtb-02f5d3e751a1c92b0",
            "default_security_group_id": "sg-062d5c1667ec19860",
            "dhcp_options_id": "dopt-035c8fc4b56f7e278",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-07337d71db6c9d690",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02f5d3e751a1c92b0",
            "owner_id": "604628568255",
            "tags": {
              "Name": "hustlrweb-UAT-vpc",
              "billing_code": "DevOps1",
              "company": "Hustlrmantics",
              "environment": "UAT",
              "project": "Hustlrmantics-tech-bunker"
            },
            "tags_all": {
              "Name": "hustlrweb-UAT-vpc",
              "billing_code": "DevOps1",
              "company": "Hustlrmantics",
              "environment": "UAT",
              "project": "Hustlrmantics-tech-bunker"
            }
          }
        }
      ]
    }
  ]
}